# Jerome7

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  README_DEV.md  SECURITY.md  alembic.ini  mcp.json  pyproject.toml  requirements.txt  start.sh
.claude/: launch.json  settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: agent_development.md  bug_report.md  feature_request.md  session_feedback.md  specialist_application.md
.github/workflows/: ci.yml  wellness-gate.yml
cli/: index.js  package.json
content/: devto-article.md  show-hn.md  tiktok-scripts.md
content/launch/: hackernews.md  linkedin.md  producthunt.md  reddit.md  twitter_thread.md
discord_bot/: bot.py
docs/: SPECIALISTS.md  SPONSORSHIP.md  VISION.md
examples/: pod_simulation.py  seven7_demo.py
integrations/: README.md
integrations/openclaw/: SKILL.md
integrations/zeroclaw/: jerome7.toml
mcp_server/: README.md  server.py
migrations/: env.py
scripts/: seed.py  twitter_daily.py
src/: events.py
src/agents/: coach.py  community.py  context.py  nudge.py  pattern.py  scheduler.py  session_types.py  streak.py
src/agents/daily_checkup/: __init__.py  checkup_orchestrator.py  checkup_questions.py  intervention_engine.py  trend_analyzer.py
src/agents/mesh/: __init__.py  a2a_protocol.py  agent_mesh.py  agent_registry.py  (+2 more)
src/api/: auth.py  email_utils.py  main.py  meta.py  models.py  reminders.py
src/cli/: main.py
src/db/: database.py  models.py
src/mcp/: yu_bridge.py
static/: manifest.json  robots.txt  sitemap.xml  sw.js
streak_page/templates/: streak.html
tests/: test_daily.py  test_email_utils.py  test_models.py  test_streak.py
(+55 files in other folders)
